--- a/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication.CS.csproj
+++ b/src/Content/NetCoreTool.Template.WebApi/CSharp/Company.WebApplication.CS.csproj
@@ -7,7 +7,12 @@
     <!--#endif -->
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!--#if (DockerfileOption) -->
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
+    <!--#endif -->
   </PropertyGroup>
+  <!--#if (HasAnySteeltoe) -->
 
   <PropertyGroup>
     <!--#if (HasChosenSteeltoeVersionInIDE) -->
@@ -16,12 +21,15 @@
     <SteeltoeVersion>$(SteeltoeVersionInCLI)</SteeltoeVersion>
     <!--#endif -->
   </PropertyGroup>
+  <!--#endif -->
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Condition="'$(IsFrameworkNet60)' == 'True'" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Condition="'$(IsFrameworkNet80)' == 'True'" Version="8.0.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Condition="'$(IsFrameworkNet80)' == 'True'" Version="6.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Condition="'$(IsFrameworkNet90)' == 'True'" Version="9.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Condition="'$(IsFrameworkNet100)' == 'True'" Version="10.0.*" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Condition="'$(DockerfileOption)' == 'True'" Version="1.23.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Condition="'$(IsFrameworkNet60)' == 'True'" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Condition="'$(IsFrameworkNet80)' == 'True'" Version="6.6.2" />
   </ItemGroup>
   <!--#if (HasAnySteeltoe) -->
 
